force-app/main/default/objects/Trust__c/fields/Trust_Taxability__c.field-meta.xml
<CustomField>
    <fullName>Trust_Taxability__c</fullName>
    <label>Trust Taxability</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Grantor</fullName>
            </value>
            <value>
                <fullName>QDT Complex</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>