force-app/main/default/objects/Trust__c/fields/Unfunded_Funded_Sent__c.field-meta.xml
<CustomField>
    <fullName>Unfunded_Funded_Sent__c</fullName>
    <label>Unfunded Funded Sent</label>
    <type>Date</type>
</CustomField>