force-app/main/default/objects/Trust__c/fields/Update_EIN_and_BID__c.field-meta.xml
<CustomField>
    <fullName>Update_EIN_and_BID__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Update EIN and BID</label>
    <type>Checkbox</type>
</CustomField>