force-app/main/default/objects/Trust__c/fields/Updated_Joinder_Approved_Date__c.field-meta.xml
<CustomField>
    <fullName>Updated_Joinder_Approved_Date__c</fullName>
    <label>Updated Joinder Approved Date</label>
    <type>Date</type>
</CustomField>