force-app/main/default/objects/Trust__c/fields/View_in_True_Link__c.field-meta.xml
<CustomField>
    <fullName>View_in_True_Link__c</fullName>
    <formula>If(isblank(TrueLink_ID__c),Name,Hyperlink(&quot;https://member.truelinkfinancial.com/member/organizations/arc-of-texas-x4540358/clients/&quot;&amp;TrueLink_ID__c,Name,&quot;_blank&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>View in True Link</label>
    <type>Text</type>
</CustomField>