force-app/main/default/objects/Trust__c/fields/Welcome_Funded_Sent__c.field-meta.xml
<CustomField>
    <fullName>Welcome_Funded_Sent__c</fullName>
    <label>Welcome Funded Sent</label>
    <type>Date</type>
</CustomField>