force-app/main/default/objects/Trust__c/fields/Welcome_Packet_Sent__c.field-meta.xml
<CustomField>
    <fullName>Welcome_Packet_Sent__c</fullName>
    <label>Welcome Packet Sent</label>
    <type>Date</type>
</CustomField>