force-app/main/default/objects/Trust__c/fields/Welcome_Unfunded_Sent__c.field-meta.xml
<CustomField>
    <fullName>Welcome_Unfunded_Sent__c</fullName>
    <label>Welcome Unfunded Sent</label>
    <type>Date</type>
</CustomField>