force-app/main/default/objects/Trust__c/fields/X18_Digit_Attorney_ID__c.field-meta.xml
<CustomField>
    <fullName>X18_Digit_Attorney_ID__c</fullName>
    <formula>casesafeid(Attorney__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>18 Digit Attorney ID</label>
    <type>Text</type>
</CustomField>