force-app/main/default/objects/Trust__c/fields/X18_Digit_Beneficiary_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>X18_Digit_Beneficiary_Account_ID__c</fullName>
    <formula>CASESAFEID(Beneficiary__r.X18_Digit_Account_ID__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>18 Digit Beneficiary Account ID</label>
    <type>Text</type>
</CustomField>