force-app/main/default/objects/Trust__c/fields/X18_Digit_Closing_ID__c.field-meta.xml
<CustomField>
    <fullName>X18_Digit_Closing_ID__c</fullName>
    <formula>CASESAFEID(Closing__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>18 Digit Closing ID</label>
    <type>Text</type>
</CustomField>