force-app/main/default/objects/Trust__c/fields/X18_Digit_Grantor_Contact_ID__c.field-meta.xml
<CustomField>
    <fullName>X18_Digit_Grantor_Contact_ID__c</fullName>
    <formula>CASESAFEID(Grantor__r.PersonContactId)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>18 Digit Grantor Contact ID</label>
    <type>Text</type>
</CustomField>