force-app/main/default/objects/Trust__c/validationRules/Approved_By.validationRule-meta.xml
<ValidationRule>
    <fullName>Approved_By</fullName>
    <active>true</active>
    <description>Approved By Restrictions</description>
    <errorConditionFormula>AND(ISCHANGED(Approved_By__c),  
$User.Can_Approve_Trusts__c = FALSE)</errorConditionFormula>
    <errorMessage>Only certain users are authorized to approve trusts.</errorMessage>
</ValidationRule>