force-app/main/default/objects/Trust__c/validationRules/Only_Certain_Users_Can_Move_To_Closing.validationRule-meta.xml
<ValidationRule>
    <fullName>Only_Certain_Users_Can_Move_To_Closing</fullName>
    <active>true</active>
    <description>Only certain users can move to closing</description>
    <errorConditionFormula>AND(ischanged( Trust_Status__c ),text(Trust_Status__c)=&quot;Closing&quot;, $User.Can_Activate_or_Close_a_Trust__c =False)</errorConditionFormula>
    <errorMessage>Only certain users can move Trust to Closing.</errorMessage>
</ValidationRule>