force-app/main/default/objects/Trust__c/validationRules/Restrict_Activation.validationRule-meta.xml
<ValidationRule>
    <fullName>Restrict_Activation</fullName>
    <active>false</active>
    <description>Restrict Activation</description>
    <errorConditionFormula>AND(ISCHANGED(Trust_Status__c),
$User.Can_Activate_or_Close_a_Trust__c  = FALSE,
TEXT(Trust_Status__c) = &quot;Active&quot;)</errorConditionFormula>
    <errorMessage>Only certain users can activate Trusts which begins the sync with True Link</errorMessage>
</ValidationRule>