force-app/main/default/objects/Trust__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Trust_Status__c</columns>
    <columns>Trust_Type__c</columns>
    <columns>Beneficiary__c</columns>
    <columns>Beneficiary_Status__c</columns>
    <columns>Distribution_Guidelines__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>