force-app/main/default/objects/Trust__c/listViews/Grantors.listView-meta.xml
<ListView>
    <fullName>Grantors</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Trust_Status__c</columns>
    <columns>View_in_True_Link__c</columns>
    <columns>Trust_Type__c</columns>
    <columns>True_Link_Balance__c</columns>
    <columns>Internal_Account_Number__c</columns>
    <columns>Number_Value_Internal_Account_Number__c</columns>
    <columns>Beneficiary__c</columns>
    <columns>Beneficiary_Status__c</columns>
    <columns>Distribution_Guidelines__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Grantor__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>Trust_Status__c</field>
        <operation>equals</operation>
        <value>Future Funded</value>
    </filters>
    <label>Grantors - Future Funded</label>
</ListView>