force-app/main/default/objects/Trust__c/listViews/Pending_Trusts.listView-meta.xml
<ListView>
    <fullName>Pending_Trusts</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Trust_Type__c</columns>
    <columns>Internal_Account_Number__c</columns>
    <columns>Number_Value_Internal_Account_Number__c</columns>
    <columns>Beneficiary__c</columns>
    <columns>Beneficiary_Status__c</columns>
    <columns>Distribution_Guidelines__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Trust_Status__c</field>
        <operation>equals</operation>
        <value>Intake,Materials Received-Complete,Future Funded</value>
    </filters>
    <label>Pending Trusts</label>
</ListView>