force-app/main/default/objects/Trust__c/listViews/Primary_Rep_Updated_Date.listView-meta.xml
<ListView>
    <fullName>Primary_Rep_Updated_Date</fullName>
    <columns>NAME</columns>
    <columns>Primary_Rep_Last_Update__c</columns>
    <columns>Primary_Rep_Updated_First_Name__c</columns>
    <columns>Primary_Rep_Updated_Last_Name__c</columns>
    <columns>Primary_Rep_Updated_Email__c</columns>
    <columns>Primary_Rep_Updated_Phone__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Primary_Rep_Last_Update__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Primary Rep Updated Date</label>
</ListView>