force-app/main/default/objects/Trust__c/listViews/Trusts_w_Internal_Account_Numbers.listView-meta.xml
<ListView>
    <fullName>Trusts_w_Internal_Account_Numbers</fullName>
    <columns>NAME</columns>
    <columns>Trust_Type__c</columns>
    <columns>Internal_Account_Number__c</columns>
    <columns>Number_Value_Internal_Account_Number__c</columns>
    <columns>Ignore_for_Internal_Account_Number__c</columns>
    <columns>Beneficiary__c</columns>
    <columns>Beneficiary_Status__c</columns>
    <columns>Distribution_Guidelines__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Internal_Account_Number__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Trusts w/ Internal Account Numbers</label>
</ListView>